Address code review